use sequence is being logged

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
     margin: 0 auto;
     margin-top: 20px;
     text-align: center;
-    font-size: 100px
+    font-size: 100px;
 }
 #startButton {
     width: 50px;
