--- a/css/styles.css
+++ b/css/styles.css
@@ -98,14 +98,37 @@ body {
     margin: 0 auto;
     margin-top: 70px;
     position: absolute;
-    left: 125px;
+    left: 65px;
     outline: none;
     border-color: #312F31;
+}
+
+#resetButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #312F31;
+  margin: 0 auto;
+  margin-top: 70px;
+  position: absolute;
+  right: 65px;
+  outline: none;
+  border-color: black;
+}
+
+#reset {
+  margin-top: 123px;
+  margin-left: 180px;
+  font-weight: bold;
+  font-family: 'Play', sans-serif;
+  color: #312F31;
+  font-size: 25px;
+
 }
 #start {
     position: absolute;
     margin-top: 123px;
-    margin-left: 115px;
+    margin-left: 55px;
     font-weight: bold;
     font-family: 'Play', sans-serif;
     color: #312F31;
