--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,26 @@ body {
     background-size: 100% 1.2em;
     ;
 }
+
+#displayResult {
+  height: 125px;
+  width: 400px;
+  background-color: grey;
+  margin: 0 auto;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 90px;
+
+}
 #mainToy {
     height: 600px;
     width: 600px;
     border-radius: 600px;
     background-color: #312F31;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 25px;
     position: relative;
-     box-shadow: 20px 10px 20px 10px  #888888;
+    box-shadow: 20px 10px 20px 10px  #888888;
 }
 #innerConsole {
     height: 300px;
@@ -95,10 +106,10 @@ body {
   height: 30px;
   width: 40px;
   background-color: black;
-  color: red;
+  color: #ff0101;
   font-size: 27px;
   text-align: center;
-
+  font-weight: bold;
   border: 4px solid #312F31;
   border-radius: 4px;
   margin: 0 auto;
