--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     margin: 0 auto;
     margin-top: 25px;
     position: relative;
-    box-shadow: 20px 10px 20px 10px  #888888;
+    box-shadow: 0px 0px 20px 10px  #888888;
 }
 #innerConsole {
     height: 300px;
@@ -158,4 +158,18 @@ body {
     font-family: 'Play', sans-serif;
     color: #312F31;
     font-size: 25px;
+}
+
+
+.rotate {
+  -webkit-animation: rotating 8s linear infinite;
+}
+
+@-webkit-keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
+    }
 }
