--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,14 @@ body {
     background-size: 100% 1.2em;
     ;
 }
-
 #displayResult {
-  height: 125px;
-  width: 400px;
-  background-color: grey;
-  margin: 0 auto;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 90px;
-
+    height: 125px;
+    width: 400px;
+    background-color: grey;
+    margin: 0 auto;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;
 }
 #mainToy {
     height: 600px;
@@ -23,7 +21,7 @@ body {
     margin: 0 auto;
     margin-top: 25px;
     position: relative;
-    box-shadow: 0px 0px 20px 10px  #888888;
+    box-shadow: 0px 0px 20px 10px #888888;
 }
 #innerConsole {
     height: 300px;
@@ -47,7 +45,6 @@ body {
     background-color: #158D43;
     border-radius: 450px 0px 0px 0px;
     position: absolute;
-
 }
 #red {
     height: 260px;
@@ -57,7 +54,6 @@ body {
     right: 40px;
     position: absolute;
     border-radius: 0px 450px 0px 0px;
-
 }
 #yellow {
     height: 260px;
@@ -67,7 +63,6 @@ body {
     background-color: #F5D825;
     border-radius: 0px 0px 0px 450px;
     position: absolute;
-
 }
 #blue {
     height: 260px;
@@ -77,7 +72,6 @@ body {
     background-color: #208BD6;
     border-radius: 0px 0px 450px 0px;
     position: absolute;
-
 }
 #horizontal {
     position: absolute;
@@ -101,35 +95,32 @@ body {
     font-family: 'Play', sans-serif;
     color: #312F31;
 }
-
 #timeToMove {
-  height: 30px;
-  width: 40px;
-  background-color: black;
-  color: #F5D825;
-  font-size: 27px;
-  text-align: center;
-  font-weight: bold;
-  border: 4px solid #312F31;
-  border-radius: 4px;
-  position: absolute;
-  left: 75px;
-
+    height: 30px;
+    width: 40px;
+    background-color: black;
+    color: #F5D825;
+    font-size: 27px;
+    text-align: center;
+    font-weight: bold;
+    border: 4px solid #312F31;
+    border-radius: 4px;
+    position: absolute;
+    left: 75px;
 }
-#roundDisplay{
-  height: 30px;
-  width: 40px;
-  background-color: black;
-  color: #ff0101;
-  font-size: 27px;
-  text-align: center;
-  font-weight: bold;
-  border: 4px solid #312F31;
-  border-radius: 4px;
-  right: 70px;
-  top: 113px;
-  position: absolute;
-
+#roundDisplay {
+    height: 30px;
+    width: 40px;
+    background-color: black;
+    color: #ff0101;
+    font-size: 27px;
+    text-align: center;
+    font-weight: bold;
+    border: 4px solid #312F31;
+    border-radius: 4px;
+    right: 70px;
+    top: 113px;
+    position: absolute;
 }
 #startButton {
     width: 40px;
@@ -143,28 +134,25 @@ body {
     outline: none;
     border-color: #312F31;
 }
-
 #resetButton {
-  width: 40px;
-  height: 40px;
-  border-radius: 40px;
-  background-color: #312F31;
-  margin: 0 auto;
-  margin-top: 60px;
-  position: absolute;
-  right: 65px;
-  outline: none;
-  border-color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background-color: #312F31;
+    margin: 0 auto;
+    margin-top: 60px;
+    position: absolute;
+    right: 65px;
+    outline: none;
+    border-color: black;
 }
-
 #reset {
-  margin-top: 104px;
-  margin-left: 190px;
-  font-weight: bold;
-  font-family: 'Play', sans-serif;
-  color: #312F31;
-  font-size: 18px;
-
+    margin-top: 104px;
+    margin-left: 190px;
+    font-weight: bold;
+    font-family: 'Play', sans-serif;
+    color: #312F31;
+    font-size: 18px;
 }
 #start {
     position: absolute;
@@ -175,105 +163,91 @@ body {
     color: #312F31;
     font-size: 18px;
 }
-
 #crazyMode {
-  width: 40px;
-  height: 40px;
-  border-radius: 40px;
-  background-color: #208BD6;
-  outline: none;
-  border-color: ;
-  font-weight: bold;
-  font-family: 'Play', sans-serif;
-  color: #312F31;
-  font-size: 30px;
-  position: absolute;
-  right: 130px;
-  bottom: 87px;
-  border-color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background-color: #208BD6;
+    outline: none;
+    border-color: ;
+    font-weight: bold;
+    font-family: 'Play', sans-serif;
+    color: #312F31;
+    font-size: 30px;
+    position: absolute;
+    right: 130px;
+    bottom: 87px;
+    border-color: black;
 }
-
 #difficultySwitch {
     position: absolute;
     right: 135px;
     bottom: 25px;
 }
-
 #difficultyEasy {
-  position: absolute;
-  font-family: 'Play', sans-serif;
-  right: 35px;
-  bottom: 1px;
-  font-size: 14px;
+    position: absolute;
+    font-family: 'Play', sans-serif;
+    right: 35px;
+    bottom: 1px;
+    font-size: 14px;
 }
-
 #difficultyHard {
-  position: absolute;
-  font-family: 'Play', sans-serif;
-  left: 34px;
-  bottom: 1px;
-  font-size: 14px;
-
+    position: absolute;
+    font-family: 'Play', sans-serif;
+    left: 34px;
+    bottom: 1px;
+    font-size: 14px;
 }
-
-.winLoseMessage  {
-	margin: 0 auto;
-  width: 600px;
-  padding-left: 120px;
-  display: none;
+.winLoseMessage {
+    margin: 0 auto;
+    width: 600px;
+    padding-left: 120px;
+    display: none;
 }
-
-
-
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 17px;
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
 }
-
-.switch input {display:none;}
-
+.switch input {
+    display: none;
+}
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #312F31;
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #312F31;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
-
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 13px;
-  width: 13px;
-  left: 2px;
-  bottom: 2px;
-  background-color: #208BD6;
-  -webkit-transition: .4s;
-  transition: .4s;
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: #208BD6;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
-
-
 input:checked + .slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
-  transform: translateX(13px);
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
 }
-
 .rotate {
-  -webkit-animation: rotating 8s linear infinite;
+    -webkit-animation: rotating 8s linear infinite;
 }
-
 @-webkit-keyframes rotating {
-    from{
+    from {
         -webkit-transform: rotate(0deg);
     }
-    to{
+    to {
         -webkit-transform: rotate(360deg);
     }
 }
