--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+
+
+
+
 body {
     background-color: #fff;
     background-image: linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), linear-gradient(#eee .1em, transparent .1em);
@@ -37,7 +41,7 @@ body {
     top: 140px;
     left: 140px;
 }
-#green {
+#green {     // make button class for same attributes
     height: 260px;
     width: 260px;
     top: 40px;
